packages/svelte/tests/compiler-errors/samples/style-unclosed/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid_css_identifier',
		message: 'Expected a valid CSS identifier',
		position: [9, 9]
	}
});
